@@ -1,3 +1,8 @@
+2006-12-01  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* sysdeps/unix/sysv/linux/x86_64/sigaction.c: Fix compatibility with
+	libgcc not supporting `rflags' unwinding (register # >= 17).
+
 2006-11-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* sunrpc/svc_run.c (svc_run): Set my_pollfd to new_pollfd if realloc
